--- a/views/index.html
+++ b/views/index.html
@@ -114,6 +114,11 @@
             <p>Got a project we could brew together? <br><b>Shoot me a message!</b><br><br>
                 Also open for all other inquiries.. <br>and free airline tickets. ;)
             </p>
+            <div class="downloads">
+                <a href="../images/downloadable_creativecv.pdf" download>Download Creative CV</a>
+                <br><br>
+                <a href="../images/downloadable_miniportfolio.pdf" download>Download Mini Portfolio</a>
+            </div>
             <div class="socials">
                 <a target="_blank" href="https://www.linkedin.com/in/biancacmatira"><img src="../images/sicon-in.png"></a>
                 <a target="_blank" href="https://www.behance.net/biancacmatira"><img src="../images/sicon-be.png"></a>
