Fixed: downloadables to new tab

--- a/views/index.html
+++ b/views/index.html
@@ -115,9 +115,9 @@
                 Also open for all other inquiries.. <br>and free airline tickets. ;)
             </p>
             <div class="downloads">
-                <a href="../images/downloadable_creativecv.pdf" download>Download Creative CV</a>
+                <a target="_blank" href="../images/downloadable_creativecv.pdf" download>Download Creative CV</a>
                 <!-- <br><br> -->
-                <a href="../images/downloadable_miniportfolio.pdf" download>Download Mini Portfolio</a>
+                <a target="_blank" href="../images/downloadable_miniportfolio.pdf" download>Download Mini Portfolio</a>
             </div>
             <div class="socials">
                 <a target="_blank" href="https://www.linkedin.com/in/biancacmatira"><img src="../images/sicon-in.png"></a>
